# csharp-skel

./: .gitignore  CMakeLists.txt  Client.cs  README.md  Utils.cs
cmake-submodules/: FindCSharp.cmake
